test/domains/compilerErrors/constDomain3.chpl
var d: domain(int);
forall i in 1..2 do
  d.add(i);
